--- a/plugins/net.reimone.ttloc.model.usergames/.settings/org.eclipse.core.resources.prefs
+++ b/plugins/net.reimone.ttloc.model.usergames/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
-#Fri Jan 13 13:44:13 CET 2012
+#Mon Feb 13 22:19:26 CET 2012
 eclipse.preferences.version=1
-encoding//metamodel/usergames.ecorediag=UTF-8
+encoding//metamodel/UserSpiele.ecorediag=UTF-8
+encoding//metamodel/UserSpiele.xsd=UTF8
