--- a/plugins/net.reimone.ttloc.application/build.properties
+++ b/plugins/net.reimone.ttloc.application/build.properties
@@ -3,5 +3,7 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                css/default.css,\
-               Application.e4xmi
+               Application.e4xmi,\
+               libs/httpclient-4.2.1.jar,\
+               libs/httpcore-4.2.1.jar
 source.. = src/
