--- a/plugins/net.reimone.ttloc.communication/build.properties
+++ b/plugins/net.reimone.ttloc.communication/build.properties
@@ -4,4 +4,5 @@ bin.includes = META-INF/,\
                .,\
                libs/httpclient-4.2.1.jar,\
                libs/httpcore-4.2.1.jar,\
-               libs/commons-logging-1.1.1.jar
+               libs/commons-logging-1.1.1.jar,\
+               libs/commons-codec-1.7.jar
